--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nouislider": "14.6.0",
     "register-service-worker": "1.7.1",
     "vue": "2.6.11",
+    "vue-alertify": "^1.1.0",
     "vue-chartjs": "3.5.0",
     "vue-class-component": "^7.2.6",
     "vue-clipboard2": "0.3.1",
