--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.5.1",
     "nouislider": "14.6.0",
     "register-service-worker": "1.7.1",
+    "socket.io-client": "^2.3.1",
     "vue": "2.6.11",
     "vue-alertify": "^1.1.0",
     "vue-chartjs": "3.5.0",
