--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-flatpickr-component": "8.1.5",
     "vue-router": "3.3.4",
     "vue2-transitions": "0.3.0",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
