--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eventbus": "0.0.3",
     "flatpickr": "4.6.3",
     "jquery": "^3.5.1",
+    "notiflix": "^2.6.0",
     "nouislider": "14.6.0",
     "register-service-worker": "1.7.1",
     "socket.io-client": "^2.3.1",
