--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nouislider": "14.6.0",
     "register-service-worker": "1.7.1",
     "socket.io-client": "^2.3.1",
+    "sweetalert": "^2.1.2",
     "vue": "2.6.11",
     "vue-alertify": "^1.1.0",
     "vue-chartjs": "3.5.0",
@@ -32,7 +33,9 @@
     "vue-clipboard2": "0.3.1",
     "vue-flatpickr-component": "8.1.5",
     "vue-router": "3.3.4",
+    "vue-select": "^3.10.8",
     "vue2-transitions": "0.3.0",
+    "vuejs-paginate": "^2.1.0",
     "vuelidate": "^0.7.5",
     "vuex": "^3.5.1"
   },
