--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-class-component": "^7.2.6",
     "vue-clipboard2": "0.3.1",
     "vue-flatpickr-component": "8.1.5",
+    "vue-plain-pagination": "^0.3.0",
     "vue-router": "3.3.4",
     "vue-select": "^3.10.8",
     "vue2-transitions": "0.3.0",
